# elfshaker

./: CONTRIBUTORS  Cargo.toml  README.md  SECURITY.md  elfshaker.nix  flake.nix
.github/workflows/: clippy.yml  release.yml  rust.yml  test-nix.yml
contrib/: README.md  create-test-pack  elfshaker-store-all  git-checkout-worktree  git-list-between  manyclangs-build  manyclangs-build-commits  manyclangs-build-month  manyclangs-cmake  manyclangs-run  manyclangs-setup.sh
contrib/compdb2line/: go.mod  go.sum  main.go
contrib/elfshaker-serve/: commits.go  go.mod  go.sum  main.go  snapshot_fs.go
docs/contributors/: contributing.md  format.md
docs/users/: installing.md  usage.md
src/: atomicfile.rs  batch.rs  entrypool.rs  fs.rs  lib.rs  log.rs  packidx.rs  pathidx.rs  progress.rs  repo.rs
src/packidx/: mod.rs  packidx.rs  packidxv1.rs  packidxv2.rs  verpackidx.rs
src/repo/: algo.rs  constants.rs  error.rs  fs.rs  mod.rs  pack.rs  remote.rs  repository.rs
test-scripts/: check.sh
test-scripts/artifacts/: verification-windows.pack  verification-windows.pack.idx  verification.pack  verification.pack.idx
