# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2021 Arm Limited or its affiliates and Contributors. All rights reserved.

[package]
name = "elfshaker"
version = "1.0.0-rc1"
authors = ["Veselin Karaganev <veselin.karaganev@arm.com>", "Peter Waller <peter.waller@arm.com>"]
edition = "2018"

[[bin]]
name = "elfshaker"
path = "src/bin/elfshaker/main.rs"

[dependencies]
zstd = { version = "0.9.0", features = ["zstdmt"] }
crossbeam-utils = "0.8"
walkdir = "2.3.2"
clap = "2.33.0"
rust-crypto = "0.2.36"
hashbrown = "0.12.3"
hex = "0.4.3"
chrono = "0.4.19"
url = "2.2.2"
ureq = "2.4.0"
serde = { version = "1.0.126", features = ["derive", "rc"] }
rmp-serde = "1.1.1"
num_cpus = "1.13.0"
log = "0.4.0"
lazy_static = "1.4.0"
libc = "0.2.0"
rand = "0.8.0"
fs2 = "0.4.3"
