# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2021 Arm Limited or its affiliates and Contributors. All rights reserved.

[package]
name = "elfshaker"
version = "1.0.0-rc1"
authors = ["Veselin Karaganev <veselin.karaganev@arm.com>", "Peter Waller <peter.waller@arm.com>"]
edition = "2018"

[[bin]]
name = "elfshaker"
path = "src/bin/elfshaker/main.rs"

[dependencies]
zstd = { version = "0.13.3", features = ["zstdmt"] }
crossbeam-utils = "0.8"
walkdir = "2.5.0"
clap = { version = "3", features = ["color", "env", "termcolor"] }
rust-crypto = "0.2.36"
hashbrown = "0.15.3"
hex = "0.4.3"
chrono = "0.4.41"
url = "2.5.4"
ureq = "2.12.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
rmp-serde = "0.15.5"
num_cpus = "1.17.0"
log = "0.4.27"
lazy_static = "1.5.0"
libc = "0.2.172"
rand = "0.9.1"
fs2 = "0.4.3"
winapi = "0.3.9"
